--- a/.github/workflows/random-auto-commit.yml
+++ b/.github/workflows/random-auto-commit.yml
@@ -10,12 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+      uses: actions/checkout@v4  # Updated from v2 to v4
 
     - name: Setup Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5  # Updated from v2 to v5
       with:
         python-version: '3.x'
 
