--- a/.github/workflows/random-auto-commit.yml
+++ b/.github/workflows/random-auto-commit.yml
@@ -8,12 +8,13 @@ on:
 jobs:
   auto-commit:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # This line gives the job permission to push to the repo
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0
-        token: ${{ secrets.PAT }}  # Use PAT for checkout
+        fetch-depth: 0  # Fetch all history for all branches and tags
 
     - name: Setup Python
       uses: actions/setup-python@v5
@@ -86,4 +87,6 @@ jobs:
         git config --local user.name "github-actions[bot]"
         git add commit_times.txt commit_data.txt
         git commit -m "Auto commit: $(date -u)"
-        git push https://${{ secrets.PAT }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
