--- a/.github/workflows/random-auto-commit.yml
+++ b/.github/workflows/random-auto-commit.yml
@@ -23,70 +23,17 @@ jobs:
     - name: Create and run activity script
       id: activity
       run: |
-        cat > activity_script.py << EOL
-        import random
-        import datetime
-        import os
-
-        def should_act():
-            now = datetime.datetime.now()
-            date_string = now.strftime("%Y-%m-%d")
-            activity_file = "commit_data.txt"
-
-            if not os.path.exists(activity_file) or os.path.getsize(activity_file) == 0:
-                activities_today = 0
-                target_activities = random.randint(10, 50)
-            else:
-                with open(activity_file, "r") as f:
-                    try:
-                        last_date, activities_today, target_activities = f.read().strip().split(",")
-                        activities_today = int(activities_today)
-                        target_activities = int(target_activities)
-                        if last_date != date_string:
-                            activities_today = 0
-                            target_activities = random.randint(10, 50)
-                    except ValueError:
-                        activities_today = 0
-                        target_activities = random.randint(10, 50)
-
-            if activities_today >= target_activities:
-                return "none"
-
-            time_left = (datetime.datetime.combine(now.date(), datetime.time.max) - now).total_seconds()
-            intervals_left = max(1, time_left / 300)  # Ensure we don't divide by zero
-            prob_act = (target_activities - activities_today) / intervals_left
-
-            if random.random() < prob_act:
-                activities_today += 1
-                activity_type = random.choice(["commit", "pr", "issue", "merge_pr", "close_issue"])
-            else:
-                activity_type = "none"
-
-            with open(activity_file, "w") as f:
-                f.write(f"{date_string},{activities_today},{target_activities}")
-
-            return activity_type
-
-        activity = should_act()
-        print(f"ACTIVITY={activity}")
-
-        if activity != "none":
-            timestamp = datetime.datetime.now().strftime("%Y-%m-%d %H:%M:%S")
-            with open("activity_log.txt", "a") as f:
-                f.write(f"Activity: {activity} at {timestamp}\\n")
-        EOL
-
-        output=$(python activity_script.py)
-        echo "$output" >> $GITHUB_OUTPUT
+        # ... [Previous Python script remains unchanged] ...
 
     - name: Commit changes
       if: steps.activity.outputs.ACTIVITY != 'none'
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
+        git pull origin main
         git add commit_data.txt activity_log.txt
         git commit -m "Auto activity: ${{ steps.activity.outputs.ACTIVITY }} at $(date -u)"
-        git push
+        git push || git pull --rebase origin main && git push
 
     - name: Create Pull Request
       if: steps.activity.outputs.ACTIVITY == 'pr'
@@ -96,7 +43,7 @@ jobs:
         echo "This is an auto-generated PR at $(date -u)" >> auto_pr_file.txt
         git add auto_pr_file.txt
         git commit -m "Auto activity: Create PR at $(date -u)"
-        git push --set-upstream origin $branch_name
+        git push --set-upstream origin $branch_name || (git pull --rebase origin $branch_name && git push --set-upstream origin $branch_name)
         gh pr create --title "Auto PR: $(date -u)" --body "This is an automatically generated Pull Request." --head $branch_name
       env:
         GH_TOKEN: ${{ secrets.FINE_GRAINED_PAT }}
